--- a/templets/shengtainongye/index.htm
+++ b/templets/shengtainongye/index.htm
@@ -401,22 +401,19 @@
                     <div class="contact_type_item wow fadeInUp">
                         <span class="contact_icon"></span>
                         <div>
-                            <p>咨询热线</p>
-                            <p>400-000-0000</p>
+                            {dede:global.lxfs_dianhua/}
                         </div>
                     </div>
                     <div class="contact_type_item wow fadeInUp" data-wow-delay="0.3s">
                         <span class="contact_icon contact_icon_qq"></span>
                         <div>
-                            <p>官方QQ</p>
-                            <p>400-000-0000</p>
+                            {dede:global.lxfs_qq/}
                         </div>
                     </div>
                     <div class="contact_type_item wow fadeInUp" data-wow-delay="0.5s">
                         <span class="contact_icon contact_icon_phone"></span>
                         <div>
-                            <p>服务手机</p>
-                            <p>1500000000</p>
+                            {dede:global.lxfs_sj/}
                         </div>
                     </div>
                 </div>
