--- a/a/yuangongfengcai/20181127/7.html
+++ b/a/yuangongfengcai/20181127/7.html
@@ -242,7 +242,7 @@
                 <a href="javascript:;">下一篇：下一篇：没有了 </a>
             </div>
             <div class="right news_detail_share">
-                <a href="<a href='http://dev03.com/'>主页</a> > <a href='/a/qiyejianjie/'>企业简介</a> > <a href='/a/yuangongfengcai/'>员工风采</a> > " class="back_list"><i class="back_icon"></i>返回列表</a>
+                <a href="/a/yuangongfengcai/" class="back_list"><i class="back_icon"></i>返回列表</a>
                 <div class="share_box">
                     <!-- JiaThis Button BEGIN -->
                     <div class="jiathis_style clearfix">
@@ -380,7 +380,7 @@
         <div class="footer_adr wow fadeInUp" data-wow-delay="1.2s">
             <div class="clearfix footer_adr_in">
                 <div class="left footer_adr_l">
-                    &copy; 2018 XX公司&nbsp;&nbsp;cfg_beian&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="http://www.ntfbb.com/" title="南通富宝贝生态农业" target="_blank">南通富宝贝生态农业</a>
+                    &copy; 2018 XX公司&nbsp;&nbsp;987654321&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="/" title="我的网站" target="_blank">我的网站</a>
                 </div>
                 <div class="right footer_adr_r">
                     <a href="#">友情链接</a>
