--- a/templets/shengtainongye/article_article.htm
+++ b/templets/shengtainongye/article_article.htm
@@ -62,7 +62,7 @@
                 <a href="javascript:;">下一篇：{dede:prenext get='next'/}</a>
             </div>
             <div class="right news_detail_share">
-                <a href="{dede:field name='position'/}" class="back_list"><i class="back_icon"></i>返回列表</a>
+                <a href="{dede:type typeid='0′ row=1}[field:typelink /]{/dede:type}" class="back_list"><i class="back_icon"></i>返回列表</a>
                 <div class="share_box">
                     <!-- JiaThis Button BEGIN -->
                     <div class="jiathis_style clearfix">
