--- a/templets/shengtainongye/index_article.htm
+++ b/templets/shengtainongye/index_article.htm
@@ -38,7 +38,7 @@
                 </div>
                 <div class="pro_nav_tab">
                     <!--<a href="javascript:;" class="active">企业简介</a>-->
-                    {dede:channel          row='4'       type ='son'   }
+                    {dede:channel          row='4'       type ='son'  currentstyle="<a href='~typelink~' class='active'>~typename~</a>" }
                     <a href="[field:typelink/]">[field:typename/]</a>
                     {/dede:channel}
                 </div>
@@ -55,11 +55,9 @@
                     <div class="company_logo wow fadeInUp"><img
                             src="{dede:global.cfg_templets_skin/}/static/picture/logo2.png" alt=""></div>
                     <div class="company_text">
-                        <h2 class="wow fadeInUp" data-wow-delay="0.2s">海南和民生态农业有限公司</h2>
+                        <h2 class="wow fadeInUp" data-wow-delay="0.2s">{dede:global.jianjie_gsmc/}</h2>
                         <p class="wow fadeInUp" data-wow-delay="0.3s">
-                            海南和民生态农业有限公司以基地化、品质化、标准化、品牌化的发展战略为指引，
-                            目前，已发展成为一家集基地种植、加工包装、冷藏保鲜、批发配送等
-                            全产业链为一体的集团化公司。
+                            {dede:global.jianjie_gsjja/}
                         </p>
                         <div class="company_pic wow fadeInUp" data-wow-delay="0.3s">
                             <img src="{dede:global.cfg_templets_skin/}/static/picture/pic1.png" alt="">
@@ -78,9 +76,7 @@
                         </div>
 
                         <div class="company_dec_text wow fadeInUp" data-wow-delay="0.4s">
-                            和民生态农业致力于整合全球资源，引领先进的国际意识观，<br>
-                            我们用心把握海内外各产品的不同特性，针对性的进行种植、筛选和采购。<br>
-                            经过数十载的辛勤耕耘，公司业务发展遍布全球，成绩斐然。
+                            {dede:global.jianjie_gsjjb/}
                         </div>
 
                     </div>
@@ -97,8 +93,7 @@
                 </div>
                 <div class="service_dec">
                     <div class="service_dec_text wow fadeInUp" data-wow-delay="0.2s">
-                        和民生态农业更引进国际领先的商业推广理念，<br>
-                        开创鲜果行业多元化的商业格局，以求将中国的健康鲜果推向全球。
+                        {dede:global.jianjie_gsjjc/}
                     </div>
                     <div class="service_dec_pic">
                         <div class="service_pic_on wow fadeInUp">
@@ -118,10 +113,7 @@
                     <P>企业愿景</P>
                 </div>
                 <div class="company_j_dec wow fadeInUp" data-wow-delay="0.3s">
-                    <p>企业的成功体现于消费者的信赖，和民生态农业始终秉承包容汇聚的行业精神，</p>
-                    <p> 吸收行业日新月异的变化和需求，对品牌及产品持续投入真心、真意、真诚，确保品质如一。</p>
-                    <p>我们始终将客户的感受放在首位，保持高度的品牌渗透力和高效的客户服务力，</p>
-                    <p> 励志成为中国果业金字招牌，为千家万户带去安全健康、新鲜美味的优质果品。</p>
+                    {dede:global.jianjie_gsjjd/}
                 </div>
             </div>
         </div>
