--- a/templets/shengtainongye/index_articlebigbang.htm
+++ b/templets/shengtainongye/index_articlebigbang.htm
@@ -36,7 +36,7 @@
                 </div>
                 <div class="pro_nav_tab">
                     <!--<a href="javascript:;" class="active">企业简介</a>-->
-                    {dede:channel row='4' type ='son' }
+                    {dede:channel row='4' type ='son' currentstyle="<a href='~typelink~' class='active'>~typename~</a>"}
                     <a href="[field:typelink/]">[field:typename/]</a>
                     {/dede:channel}
                 </div>
