--- a/a/qiyejianjie/index.html
+++ b/a/qiyejianjie/index.html
@@ -420,7 +420,7 @@
         <div class="footer_adr wow fadeInUp" data-wow-delay="1.2s">
             <div class="clearfix footer_adr_in">
                 <div class="left footer_adr_l">
-                    &copy; 2018 XX公司&nbsp;&nbsp;cfg_beian&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="http://www.ntfbb.com/" title="南通富宝贝生态农业" target="_blank">南通富宝贝生态农业</a>
+                    &copy; 2018 XX公司&nbsp;&nbsp;987654321&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="/" title="我的网站" target="_blank">我的网站</a>
                 </div>
                 <div class="right footer_adr_r">
                     <a href="#">友情链接</a>
