--- a/a/yuangongfengcai/index.html
+++ b/a/yuangongfengcai/index.html
@@ -218,6 +218,7 @@
         <div class="tab_container">
             <div class="news_content">
                 <ul class="news_con_list" id="page_container">
+                    <!--
                     <li class="news_con_item wow fadeInUp">
                         <a href="news_detail.html" class="clearfix">
                             <div class="news_pic left">
@@ -254,6 +255,7 @@
                             </div>
                         </a>
                     </li>
+                    -->
                     <li class="news_con_item wow fadeInUp" data-wow-delay="0.3s">
                         <a href="/a/yuangongfengcai/20181127/7.html" class="clearfix">
                             <div class="news_pic left">
@@ -413,7 +415,7 @@
         <div class="footer_adr wow fadeInUp" data-wow-delay="1.2s">
             <div class="clearfix footer_adr_in">
                 <div class="left footer_adr_l">
-                    &copy; 2018 XX公司&nbsp;&nbsp;cfg_beian&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="http://www.ntfbb.com/" title="南通富宝贝生态农业" target="_blank">南通富宝贝生态农业</a>
+                    &copy; 2018 XX公司&nbsp;&nbsp;987654321&nbsp;&nbsp;技术支持：<a style="color:#fff;" href="/" title="我的网站" target="_blank">我的网站</a>
                 </div>
                 <div class="right footer_adr_r">
                     <a href="#">友情链接</a>
